<resources>
    <string name="app_name">Application for testing</string>
    <string name="hello_world">Hello World! Let\'s rock!</string>

    <string name="examples_library">EXAMPLES LIBRARY</string>

    <string name="date_calendar">Date, calendar</string>
    <string name="but_test">Test</string>
    <string name="but_date_from_dialog">From dialog</string>

    <string name="but_crm">CRM</string>
    <string name="but_lib">Lib.</string>
    <string name="but_cashe">Cashe</string>
    <string name="but_sea_fight">Sea fight</string>

    <string name="but_json">JSON</string>

    <string name="but_database">Database</string>

    <string name="but_some_test">Some test</string>

    <string name="but_ok">OK</string>
    <string name="but_new">NEW</string>
    <string name="but_edit">EDIT</string>

    <string name="but_read_records">Read rec.</string>
    <string name="but_add_records">Add rec.</string>
    <string name="but_del_records">Del. rec.</string>

    <string name="but_create_table">Cr. tab.</string>
    <string name="but_delete_table">Del. tab.</string>
    <string name="but_rename_table">Ren. tab.</string>

    <string name="but_add_table_column">Add col.</string>
    <string name="but_delete_table_column">Del. col.</string>
    <string name="but_rename_table_column">Ren. col.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
