<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inalivayko.testall.cashe.ActivityCashe">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/but_cashe"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/but_read_records"
                android:id="@+id/readRecords"
                android:layout_weight="1"
                android:onClick="onClickReadRecords" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/but_add_records"
                android:id="@+id/addRecords"
                android:layout_weight="1"
                android:onClick="onClickAddRecords" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/but_del_records"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="onClickDelRecords" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_create_table"
                android:id="@+id/butCreateTable"
                android:layout_weight="1"
                android:onClick="onClickCreateTable" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_delete_table"
                android:id="@+id/butDeleteTable"
                android:layout_weight="1"
                android:onClick="onClickDeleteTable" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_rename_table"
                android:id="@+id/butRenameTable"
                android:layout_weight="1"
                android:onClick="onClickRenameTable" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_add_table_column"
                android:id="@+id/butAddTableColumn"
                android:layout_weight="1"
                android:onClick="onClickAddTableColumn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_delete_table_column"
                android:id="@+id/butDeleteTableColumn"
                android:layout_weight="1"
                android:onClick="onClickDeleteTableColumn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_rename_table_column"
                android:id="@+id/butRenameTableColumn"
                android:layout_weight="1"
                android:onClick="onClickRenameTableColumn" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
