<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".examples_library.ActivityExamplesLibrary">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/examples_library"
        android:id="@+id/tvExamplesLibrary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_calendar"
        android:id="@+id/butDateCalendar"
        android:layout_below="@+id/tvExamplesLibrary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:onClick="onClickDateCalendar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_database"
        android:id="@+id/butDatabase"
        android:layout_below="@+id/tvExamplesLibrary"
        android:layout_toRightOf="@+id/butDateCalendar"
        android:layout_marginTop="31dp"
        android:onClick="onClickDatabase" />

</RelativeLayout>
